<resources>
    <string name="app_name">Sante Coffee Merchants</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">name</string>
    <string name="dob">Date of birth</string>
    <string name="cardno">Card Number</string>
    <string name="date">date</string>
    <string name="dobb">ID dob</string>
    <string name="givenname">Given Name</string>
    <string name="ID">id</string>
    <string name="nationality">nationality</string>
    <string name="sex">sex</string>
    <string name="surname">surname</string>
    <string name="phone">phone</string>
    <string name="welcome_to_the_sante_merchant_app">Welcome to the Sante\n Merchant App</string>
    <string name="branchname">Enter Branch Name</string>
</resources>